--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+body {
+    background-color: black;
+}
+
+div {
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 { 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+}
