--- a/src/app/core/components/dashboard/dashboard.component.html
+++ b/src/app/core/components/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
-<h1>{{ currentUAHCurrency }}</h1>
+<p>
+    <mat-toolbar>
+    <span>Currency metrics</span>
+  </mat-toolbar>
+  </p>
+  
+
+
+<mat-card>
+    <h1>{{ currentUAHCurrency }}</h1>
+</mat-card>
+
