--- a/src/app/shared/components/currency-card/currency-card.component.html
+++ b/src/app/shared/components/currency-card/currency-card.component.html
@@ -1,4 +1,7 @@
-  
 <mat-card>
+    <mat-card-header>
+        <mat-card-title>{{ currencyTitle }}</mat-card-title>
+        <mat-card-subtitle>{{ currencyDate | date }}</mat-card-subtitle>
+      </mat-card-header>
     <h2>{{ currentUAHCurrency }}</h2>
 </mat-card>
