fix production build

--- a/src/app/core/components/dashboard/dashboard.component.html
+++ b/src/app/core/components/dashboard/dashboard.component.html
@@ -5,6 +5,6 @@
 </p>
 
 <div class="content-wrapper">
-  <app-currency-card [currencyTitle]="'USD/UAH'" [currentUAHCurrency]="currentUAHCurrency"></app-currency-card>
+  <app-currency-card [currencyTitle]="'USD/UAH'" [currentUAHCurrency]="currentUSDCurrency"></app-currency-card>
   <app-currency-card [currencyTitle]="'UAH/USD'" [currentUAHCurrency]="currentUAHCurrency"></app-currency-card>
 </div>
