--- a/src/app/core/components/dashboard/dashboard.component.html
+++ b/src/app/core/components/dashboard/dashboard.component.html
@@ -1,10 +1,11 @@
-<p>
   <mat-toolbar>
     <span>Currency metrics</span>
   </mat-toolbar>
-</p>
 
 <div class="content-wrapper">
   <app-currency-card [currencyTitle]="'USD/UAH'" [currentUAHCurrency]="currentUSDCurrency"></app-currency-card>
   <app-currency-card [currencyTitle]="'UAH/USD'" [currentUAHCurrency]="currentUAHCurrency"></app-currency-card>
 </div>
+
+<mat-toolbar class="footer">
+</mat-toolbar>
