--- a/src/app/shared/components/currency-card/currency-card.component.html
+++ b/src/app/shared/components/currency-card/currency-card.component.html
@@ -3,6 +3,6 @@
         <mat-card-title>{{ currencyTitle }}</mat-card-title>
         <mat-card-subtitle>{{ currencyDate | date }}</mat-card-subtitle>
       </mat-card-header>
-    <h2>{{ currentCurrency }}</h2>
+    <h2 [class.trend-down]="isTrendGoDown">{{ currentCurrency }}</h2>
     <h4>{{ prevCurrency }}</h4>
 </mat-card>
