--- a/src/app/shared/components/currency-card/currency-card.component.scss
+++ b/src/app/shared/components/currency-card/currency-card.component.scss
@@ -11,16 +11,23 @@ h2 {
     color: red;
 }
 
-.icon-trend-up {
-    
+.trend-transform {
+    transform: scale(1, -1)
 }
 
 .trend-direction {
-    background-image: url('../../../../assets/icons/arrow.svg');
-    background-size: cover;
     width: 60px;
     height: 60px;
     top: 30%;
     right: 10%;
     position: absolute;
 }
+
+#upTrend {
+    fill: green;
+}
+
+#downTrend {
+    fill: red;
+}
+
