fix currency date

--- a/src/app/core/components/dashboard/dashboard.component.html
+++ b/src/app/core/components/dashboard/dashboard.component.html
@@ -3,6 +3,12 @@
 </mat-toolbar>
 
 <div class="content-wrapper" *ngIf="currentUSDCurrency && prevUSDCurrency">
-  <app-currency-card [currencyTitle]="'USD/UAH'" [currentCurrency]="currentUSDCurrency" [prevCurrency]="prevUSDCurrency"></app-currency-card>
-  <app-currency-card [currencyTitle]="'UAH/USD'" [currentCurrency]="currentUAHCurrency" [prevCurrency]="prevUAHCurrency"></app-currency-card>
+  <app-currency-card [currencyTitle]="'USD/UAH'"
+                     [currentCurrency]="currentUSDCurrency" 
+                     [prevCurrency]="prevUSDCurrency" 
+                     [currencyDate]="currentDate"></app-currency-card>
+  <app-currency-card [currencyTitle]="'UAH/USD'" 
+                     [currentCurrency]="currentUAHCurrency" 
+                     [prevCurrency]="prevUAHCurrency" 
+                     [currencyDate]="currentDate"></app-currency-card>
 </div>
