--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { touch-action: none; height: 100%; background-color: bisque; overflow: auto }
+html, body {  height: 100%; background-color: bisque; overflow: auto }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
