add reloading by swipping down

--- a/src/app/core/components/dashboard/dashboard.component.scss
+++ b/src/app/core/components/dashboard/dashboard.component.scss
@@ -1,5 +1,6 @@
 .content-wrapper {
-    padding: 5px;
+    background: bisque;
+    height: 100%;
     app-currency-card {
         width: 100%;
     }
