--- a/src/app/core/components/dashboard/dashboard.component.html
+++ b/src/app/core/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="content-wrapper">
   <mat-toolbar>
     <span>Currency metrics</span>
-    <!-- <app-menu></app-menu> -->
+    <app-menu></app-menu>
 </mat-toolbar>
 
 <app-loader *ngIf="isLoadingContent"></app-loader>
