--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -5,7 +5,7 @@
  <div></div>
 </span>
 <mat-menu #menu="matMenu">
-  <button mat-menu-item [routerLink]="['/']" disabled>Info</button>
+  <button mat-menu-item [routerLink]="['/info']">Info</button>
   <button mat-menu-item [routerLink]="['/']">Dashboard</button>
   <button mat-menu-item (click)="onCloseApp()">Exit</button>
 </mat-menu>
