--- a/src/app/shared/components/currency-card/currency-card.component.html
+++ b/src/app/shared/components/currency-card/currency-card.component.html
@@ -1,50 +1,50 @@
 <mat-card>
-    <mat-card-header>
-        <mat-card-title>{{ currencyTitle }}</mat-card-title>
-        <mat-card-subtitle>{{ currencyDate | date }} </mat-card-subtitle>
-      </mat-card-header>
+  <mat-card-header>
+    <mat-card-title>{{ currencyTitle }}</mat-card-title>
+    <mat-card-subtitle>{{ currencyDate | date }} </mat-card-subtitle>
+  </mat-card-header>
   <div class="currency-block">
-    <h2 [class.trend-down]="isTrendGoDown">{{ currentCurrency }}</h2>  
+    <h2 [class.trend-down]="isTrendGoDown">{{ currentCurrency }}</h2>
   </div>
-    <div class="trend-direction" [class.trend-transform]="!isTrendGoDown">
-    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 490.667 490.667" style="enable-background:new 0 0 490.667 490.667;" xml:space="preserve">
-<path [id]="isTrendGoDown ? 'downTrend' : 'upTrend'" d="M245.333,0C109.839,0,0,109.839,0,245.333s109.839,245.333,245.333,245.333
-	s245.333-109.839,245.333-245.333C490.514,109.903,380.764,0.153,245.333,0z"/>
-<path style="fill:#FAFAFA;"  d="M404.523,262.592c-1.649-3.989-5.54-6.591-9.856-6.592H320V96.171
+  <div class="trend-direction" [class.trend-transform]="!isTrendGoDown">
+    <svg
+      version="1.1"
+      id="Capa_1"
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      x="0px"
+      y="0px"
+      viewBox="0 0 490.667 490.667"
+      style="enable-background: new 0 0 490.667 490.667"
+      xml:space="preserve"
+    >
+      <path
+        [id]="isTrendGoDown ? 'downTrend' : 'upTrend'"
+        d="M245.333,0C109.839,0,0,109.839,0,245.333s109.839,245.333,245.333,245.333
+	s245.333-109.839,245.333-245.333C490.514,109.903,380.764,0.153,245.333,0z"
+      />
+      <path
+        style="fill: #fafafa"
+        d="M404.523,262.592c-1.649-3.989-5.54-6.591-9.856-6.592H320V96.171
 	c0-5.891-4.776-10.667-10.667-10.667h-128c-5.891,0-10.667,4.776-10.667,10.667V256H96c-5.891-0.011-10.675,4.757-10.686,10.648
 	c-0.005,2.84,1.123,5.565,3.134,7.571l149.333,149.504c4.165,4.164,10.917,4.164,15.083,0l149.333-149.504
-	C405.253,271.171,406.171,266.581,404.523,262.592z"/>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-</svg>
-</div>
+	C405.253,271.171,406.171,266.581,404.523,262.592z"
+      />
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+      <g></g>
+    </svg>
+  </div>
 </mat-card>
