--- a/src/app/core/components/dashboard/dashboard.component.html
+++ b/src/app/core/components/dashboard/dashboard.component.html
@@ -14,6 +14,13 @@
       [prevCurrency]="prevUAHCurrency"
       [currencyDate]="currentDate"
     >
+  </app-currency-card>
+    <app-currency-card
+    [currencyTitle]="'USD/UAH'"
+    [currentCurrency]="currentUSDCurrency"
+    [prevCurrency]="prevUSDCurrency"
+    [currencyDate]="currentDate"
+  >
     </app-currency-card>
   </ng-container>
 </div>
