add style to notification

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,17 @@ mat-toolbar {
     display: flex;
     justify-content: space-between;
 }
+
+.connection-warning {
+  position: fixed;
+  bottom: 0;
+  height: 35px;
+  background: crimson;
+  width: 100%;
+  font-weight: 500;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  color: white;
+  transition: all 1s ease-out;
+}
