remove isApplicationOnline condition

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -6,4 +6,5 @@
 </span>
 <mat-menu #menu="matMenu">
   <button mat-menu-item [routerLink]="['/info']">Info</button>
+  <button mat-menu-item [routerLink]="['/']">Dashboard</button>
 </mat-menu>
