codestyle changes, add subsink

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,8 +1,7 @@
-<span
- [matMenuTriggerFor]="menu">
- <div></div>
- <div></div>
- <div></div>
+<span [matMenuTriggerFor]="menu">
+  <div></div>
+  <div></div>
+  <div></div>
 </span>
 <mat-menu #menu="matMenu">
   <button mat-menu-item [routerLink]="['/info']">Info</button>
