--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -4,6 +4,6 @@
   <div></div>
 </span>
 <mat-menu #menu="matMenu">
-  <!-- <button mat-menu-item [routerLink]="['/info']">Info</button> -->
+  <button mat-menu-item [routerLink]="['/info']">Info</button>
   <button mat-menu-item [routerLink]="['/']">Dashboard</button>
 </mat-menu>
