fix wrong USD/UAH label

--- a/src/app/core/components/dashboard/dashboard.component.html
+++ b/src/app/core/components/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
     >
     </app-currency-card>
     <app-currency-card
-      [currencyTitle]="'UAH/USD'"
+      [currencyTitle]="'USD/UAH'"
       [currentCurrency]="currencyData.currentUAHCurrency"
       [prevCurrency]="currencyData.prevUAHCurrency"
       [currencyDate]="currentDate"
