--- a/src/app/core/components/history/history.component.scss
+++ b/src/app/core/components/history/history.component.scss
@@ -5,6 +5,12 @@ p {
 .content-wrapper {
   display: flex;
   justify-content: space-between;
+  
+  app-loader {
+    position: absolute;
+    left: 45%;
+    top: 45%;
+  }
 }
 
 table {
