fix loader on dahboard

--- a/src/app/core/components/dashboard/dashboard.component.html
+++ b/src/app/core/components/dashboard/dashboard.component.html
@@ -1,7 +1,9 @@
 <div class="content-wrapper">
+
   <app-loader
-    *ngIf="apiService.isApplicationOnline && isLoadingContent"
+    *ngIf="isLoadingContent"
   ></app-loader>
+  
   <ng-container *ngIf="currencyData?.currentUAHCurrency && !isLoadingContent">
     <app-currency-card
       [currencyTitle]="'UAH/EUR'"
