--- a/src/app/core/components/budget/budget.component.html
+++ b/src/app/core/components/budget/budget.component.html
@@ -1,4 +1,8 @@
   <div class="content-wrapper">
- 
+    <mat-button-toggle-group>
+      <mat-button-toggle value="usd">USD</mat-button-toggle>
+      <mat-button-toggle value="eur">EUR</mat-button-toggle>
+      <mat-button-toggle value="uah">UAH</mat-button-toggle> 
+    </mat-button-toggle-group>
   </div>
   
