--- a/src/app/core/components/budget/budget.component.scss
+++ b/src/app/core/components/budget/budget.component.scss
@@ -1,6 +1,7 @@
   .content-wrapper {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
     
     app-loader {
       position: absolute;
