replace budget with converter component

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -4,7 +4,7 @@
   <div></div>
 </span>
 <mat-menu #menu="matMenu">
-  <button mat-menu-item [routerLink]="['/budget']">Budget</button>
+  <!-- <button mat-menu-item [routerLink]="['/converter']">Converter</button> -->
   <button mat-menu-item [routerLink]="['/history']">History</button>
   <button mat-menu-item [routerLink]="['/']">Dashboard</button>
 </mat-menu>
