--- a/src/app/core/components/converter/converter.component.html
+++ b/src/app/core/components/converter/converter.component.html
@@ -1,4 +1,20 @@
 <div class="content-wrapper"> 
+    <form>
+        <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
+            <mat-button-toggle value="usd">USD</mat-button-toggle>
+            <mat-button-toggle value="eur">EUR</mat-button-toggle>
+            <mat-button-toggle value="uah">UAH</mat-button-toggle>
+          </mat-button-toggle-group>
 
+    <mat-form-field>
+        <mat-label>Clearable input</mat-label>
+        <input matInput type="text">
+        <button mat-button *ngIf="convertedValue" matSuffix mat-icon-button aria-label="Clear" (click)="convertedValue=''">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
+
+      <button mat-button color="primary">Primary</button>
+    </form>
 </div>
   
