--- a/src/app/core/components/converter/converter.component.scss
+++ b/src/app/core/components/converter/converter.component.scss
@@ -1,5 +1,9 @@
   .content-wrapper {
     display: flex;
     justify-content: space-between;
+    form {
+      display: flex;
+      flex-direction: column;
+    }
   }
   
