--- a/src/app/core/components/converter/converter.component.html
+++ b/src/app/core/components/converter/converter.component.html
@@ -7,14 +7,13 @@
           </mat-button-toggle-group>
 
     <mat-form-field>
-        <mat-label>Clearable input</mat-label>
-        <input matInput type="text">
+        <mat-label>Currency amount</mat-label>
+        <input matInput type="text" color="primary">
         <button mat-button *ngIf="convertedValue" matSuffix mat-icon-button aria-label="Clear" (click)="convertedValue=''">
-          <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
 
-      <button mat-button color="primary">Primary</button>
+      <button mat-button color="primary">Convert</button>
     </form>
 </div>
   
