--- a/src/app/core/components/converter/converter.component.scss
+++ b/src/app/core/components/converter/converter.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     form {
-      width: 320px;
+      width: 420px;
       padding: 30px;
       display: flex;
       flex-direction: column;
@@ -10,7 +10,11 @@
         color: black;
       }
       mat-button-toggle-group {
+        background-color: #424242;
         width: 176px;
+      }
+      mat-form-field {
+        padding: 20px;
       }
     }
   }
