--- a/src/app/core/components/converter/converter.component.html
+++ b/src/app/core/components/converter/converter.component.html
@@ -1,19 +1,16 @@
 <div class="content-wrapper"> 
     <form>
-        <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
-            <mat-button-toggle value="usd">USD</mat-button-toggle>
-            <mat-button-toggle value="eur">EUR</mat-button-toggle>
-            <mat-button-toggle value="uah">UAH</mat-button-toggle>
-          </mat-button-toggle-group>
-
+        <!-- <mat-button-toggle-group appearance="legacy" name="fontStyle" #group="matButtonToggleGroup">
+            <mat-button-toggle value="USD">USD</mat-button-toggle>
+            <mat-button-toggle value="EUR">EUR</mat-button-toggle>
+            <mat-button-toggle value="UAH">UAH</mat-button-toggle>
+          </mat-button-toggle-group> -->
     <mat-form-field>
         <mat-label>Currency amount</mat-label>
-        <input matInput type="text" color="primary">
-        <button mat-button *ngIf="convertedValue" matSuffix mat-icon-button aria-label="Clear" (click)="convertedValue=''">
+        <input matInput type="number" color="primary" maxlength="100" #amount (keypress)="onContertValue(amount.value)">
+        <button mat-button *ngIf="convertedValue" matSuffix mat-icon-button >
         </button>
       </mat-form-field>
-
-      <button mat-button color="primary">Convert</button>
     </form>
 </div>
   
