--- a/src/app/core/components/history/history.component.html
+++ b/src/app/core/components/history/history.component.html
@@ -1,24 +1,24 @@
 <div class="content-wrapper">
-  <cmx-loader *ngIf="isLoadingContent"
-  ></cmx-loader>
-  <table mat-table [dataSource]="dataSource" *ngIf="!isLoadingContent">
+    <cmx-loader *ngIf="isLoadingContent"></cmx-loader>
+    <table mat-table [dataSource]="dataSource" *ngIf="!isLoadingContent">
+        <caption></caption>
 
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef>Date</th>
-      <td mat-cell *matCellDef="let element">{{ element.date }}</td>
-    </ng-container>
+        <ng-container matColumnDef="date">
+            <th scope="col" mat-header-cell *matHeaderCellDef>Date</th>
+            <td mat-cell *matCellDef="let element">{{ element.date }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="currency">
-      <th mat-header-cell *matHeaderCellDef>Currency</th>
-      <td mat-cell *matCellDef="let element">{{ element.currency }}</td>
-    </ng-container>
+        <ng-container matColumnDef="currency">
+            <th scope="col" mat-header-cell *matHeaderCellDef>Currency</th>
+            <td mat-cell *matCellDef="let element">{{ element.currency }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="value">
-      <th mat-header-cell *matHeaderCellDef>Value</th>
-      <td mat-cell *matCellDef="let element">{{ element.value }}</td>
-    </ng-container>
+        <ng-container matColumnDef="value">
+            <th scope="col" mat-header-cell *matHeaderCellDef>Value</th>
+            <td mat-cell *matCellDef="let element">{{ element.value }}</td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="historyData"></tr>
-    <tr mat-row *matRowDef="let row; columns: historyData"></tr>
-  </table>
+        <tr mat-header-row *matHeaderRowDef="historyData"></tr>
+        <tr mat-row *matRowDef="let row; columns: historyData"></tr>
+    </table>
 </div>
