fix UAH/USD title

--- a/src/app/core/components/dashboard/dashboard.component.html
+++ b/src/app/core/components/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
     >
     </cmx-currency-card> -->
         <cmx-currency-card
-            [currencyTitle]="'USD/UAH'"
+            [currencyTitle]="'UAH/USD'"
             [currentCurrency]="currencyData.currentUAHCurrency"
             [prevCurrency]="currencyData.prevUAHCurrency"
             [currencyDate]="currentDate"
