--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body {  height: 100%; background-color: black; overflow: auto }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+    background-color: #147efb;
+    overflow: auto;
+}
+body {
+    margin: 0;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
 
 .content-wrapper {
     background: bisque;
     position: absolute;
     width: 100%;
-    height: 100%; 
-  }
+    height: 100%;
+}
