change backgroud color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,8 @@
 html,
 body {
     height: 100%;
-    background-color: #147efb;
+    // background-color: #147efb;
+    background-color: black;
     overflow: auto;
 }
 body {
