--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -4,6 +4,7 @@
     <div></div>
 </span>
 <mat-menu #menu="matMenu">
+    <button mat-menu-item [routerLink]="['/dashboard']">History</button>
     <button mat-menu-item [routerLink]="['/history']">History</button>
     <button mat-menu-item [routerLink]="['/']">Dashboard</button>
 </mat-menu>
